[gd_scene load_steps=30 format=3 uid="uid://b8orbduoade27"]

[ext_resource type="Script" uid="uid://cftr1t220lj12" path="res://script/player.gd" id="1_hjaqi"]
[ext_resource type="PackedScene" uid="uid://b0v42bl82qnrr" path="res://scene/ability/sword_ability/sword_ability_controller.tscn" id="2_fvtld"]
[ext_resource type="PackedScene" uid="uid://co66107rpg80r" path="res://scene/ui/You_Die_Screen.tscn" id="2_ihjo1"]
[ext_resource type="PackedScene" uid="uid://bnactnfyipltl" path="res://scene/游戏功能组件/health_component.tscn" id="3_ct4mp"]
[ext_resource type="PackedScene" uid="uid://clk86unthnvj5" path="res://scene/ability/fireball_ability/fireball_controller.tscn" id="4_oh5ij"]
[ext_resource type="PackedScene" uid="uid://lae6sogmc22b" path="res://scene/ability/holy_light_ability/light_ability_controller.tscn" id="5_g2vtq"]
[ext_resource type="PackedScene" uid="uid://b6vs7ye342hb6" path="res://scene/ability/heaven_fruy/heaven_fruy_controller.tscn" id="5_hp4bs"]
[ext_resource type="PackedScene" uid="uid://b7lj8mwnd703c" path="res://scene/ability/ring_ability/ring_ability_controller.tscn" id="6_2fvbb"]
[ext_resource type="PackedScene" uid="uid://crcg0u1elatvt" path="res://scene/ability/ring_ability/ring_ability.tscn" id="7_ml7e8"]
[ext_resource type="Script" uid="uid://b085c5vup7duv" path="res://script/拾取范围.gd" id="8_g2vtq"]
[ext_resource type="Texture2D" uid="uid://bhn043cbs8vkk" path="res://sucai/女巫师/小女巫.png" id="10_ihjo1"]
[ext_resource type="Texture2D" uid="uid://dkqr60limdl3s" path="res://sucai/女巫师/小女巫_黑边.png" id="11_34jf3"]
[ext_resource type="AudioStream" uid="uid://bnbuawlex5u51" path="res://sucai/sound/Hurt.wav" id="13_u7b46"]
[ext_resource type="PackedScene" uid="uid://c7kjkebvjcpyo" path="res://scene/ui/虚拟摇杆.tscn" id="14_u7b46"]
[ext_resource type="PackedScene" uid="uid://x6wtjmpfecww" path="res://scene/ui/stop_button.tscn" id="15_j4wxg"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ihjo1"]
atlas = ExtResource("10_ihjo1")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dk1vr"]
atlas = ExtResource("10_ihjo1")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_34jf3"]
atlas = ExtResource("10_ihjo1")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u7b46"]
atlas = ExtResource("10_ihjo1")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j4wxg"]
atlas = ExtResource("11_34jf3")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bup7g"]
atlas = ExtResource("11_34jf3")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ja17"]
atlas = ExtResource("11_34jf3")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v4iqv"]
atlas = ExtResource("11_34jf3")
region = Rect2(192, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_u7b46"]
animations = [{
"frames": [],
"loop": true,
"name": &"new_animation",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ihjo1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dk1vr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_34jf3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u7b46")
}],
"loop": true,
"name": &"run",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j4wxg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bup7g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ja17")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v4iqv")
}],
"loop": true,
"name": &"run_black",
"speed": 8.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_fvtld"]
radius = 24.0

[sub_resource type="CircleShape2D" id="CircleShape2D_s4jxa"]
radius = 7.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_34jf3"]
size = Vector2(17, 21.961147)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ct4mp"]
bg_color = Color(0.24705882, 0.14901961, 0.19215687, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s4jxa"]
bg_color = Color(0.2627451, 0.88235295, 0.7019608, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.24705882, 0.14901961, 0.19215687, 1)

[node name="player" type="CharacterBody2D"]
position = Vector2(0, -5)
collision_layer = 2
script = ExtResource("1_hjaqi")
died_screen = ExtResource("2_ihjo1")

[node name="abilitymanager" type="Node" parent="."]

[node name="sword_ability_controller" parent="abilitymanager" instance=ExtResource("2_fvtld")]

[node name="Fireball_controller" parent="abilitymanager" instance=ExtResource("4_oh5ij")]

[node name="heaven_fury_controller" parent="abilitymanager" instance=ExtResource("5_hp4bs")]

[node name="light_ability_controller" parent="abilitymanager" instance=ExtResource("5_g2vtq")]

[node name="ring_ability_controller" parent="abilitymanager" instance=ExtResource("6_2fvbb")]
ring_ability = ExtResource("7_ml7e8")

[node name="health_component" parent="." instance=ExtResource("3_ct4mp")]
max_health = 100.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-4, 4)
scale = Vector2(1.4342026, 1.2283583)
sprite_frames = SubResource("SpriteFrames_u7b46")
animation = &"run"
frame_progress = 0.04168747
flip_h = true

[node name="拾取范围" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 0
script = ExtResource("8_g2vtq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="拾取范围"]
position = Vector2(0, 5)
shape = SubResource("CircleShape2D_fvtld")

[node name="hurtrange" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtrange"]
position = Vector2(0, 5)
shape = SubResource("CircleShape2D_s4jxa")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1.5, 4.016241)
scale = Vector2(1, 1.0032482)
shape = SubResource("RectangleShape2D_34jf3")

[node name="伤害间隔计时器" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="HealthBar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(32, 8)
offset_left = -15.000001
offset_top = -23.0
offset_right = 17.0
offset_bottom = -15.0
scale = Vector2(0.92394274, 0.84077626)
theme_override_styles/background = SubResource("StyleBoxFlat_ct4mp")
theme_override_styles/fill = SubResource("StyleBoxFlat_s4jxa")
max_value = 1.0
value = 0.5
show_percentage = false

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_u7b46")
bus = &"Sound"

[node name="Camera2D2" type="Camera2D" parent="."]
limit_left = -2879
limit_top = -2095
limit_right = 2267
limit_bottom = 2460
position_smoothing_enabled = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="虚拟摇杆" parent="CanvasLayer" node_paths=PackedStringArray("player") instance=ExtResource("14_u7b46")]
position = Vector2(0, -5)
player = NodePath("../..")

[node name="StopButton" parent="CanvasLayer" instance=ExtResource("15_j4wxg")]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_right = 0.0
grow_horizontal = 0
